web/src/components/pages/profile/info/info.css
.profile-info {
    color: var(--black);

    & h2 {
        margin-bottom: 20px;
        font-weight: 600;
    }

    & .profile-toggle {
        border-inline-start: 2px solid var(--blue);
        margin: 30px 0;
        padding-inline-start: 12px;

        & button {
            outline: none;
            border: none;
            padding: 0;
            font-family: var(--base-font-family);
            font-size: var(--font-size);
            font-weight: 600;
            color: var(--blue);
            background: none;

            & svg {
                margin-inline-start: 10px;
                transition: transform var(--easing) var(--transition-duration);

                & polygon {
                    fill: var(--blue);
                }
            }
        }

        & .explanation {
            margin-top: 10px;
            display: none;
        }

        &.expanded {
            & svg {
                transform: rotate(180deg);
            }

            & .explanation {
                display: block;
            }
        }
    }

    & .form-fields {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        width: 99%;

        &.multilingual {
            .accent-wrap {
                border-bottom: 2px solid rgba(230,229,227,.6);
                margin-bottom: 2rem;
                &:last-child {
                    border-bottom:  0;
                }
            }
        }

        .accent-wrap {
            display: block;
            width: 100%;
            position: relative;
            padding-bottom: 0.5rem;


            label {
                width: 100%;
            }

            > label:last-child {
                margin-bottom: 15px;
            }

            ul {
                margin: -30px 0 30px;
                position: absolute;
                padding: 0;
                background: white;
                z-index: var(--override-z-index);
                width: 100%;

                li {
                    cursor: pointer;
                    list-style: none;
                    padding: 15px;
                    border-bottom: 1px solid var(--dark-grey);
                }
            }

            .downshift-open {
                border: 1px solid var(--light-grey);
                box-sizing: border-box;
                box-shadow: 0 2px 5px 0 var(--light-grey);
                overflow: hidden;
            }
        }

        label {
            box-sizing: border-box;
            margin-bottom: 30px;
            flex: 1 0 34%;

            @media (--sm-down) {
                width: 100%;
            }

            @media (--md-up) {
                width: calc(50% - (var(--profile-column-margin) / 2));

                &:nth-of-type(even) {
                    margin-inline-start: var(--profile-column-margin);
                }
            }
        }
    }

    .add-language-section {
        .profile-toggle {
            margin-top: 0;
        }
    }

    .add-language {
        display: inline-block;
        justify-content: center;
        direction: ltr;
        margin-inline-end: 1rem;

        & :first-child {
            margin-right: 25px;
        }

        & :nth-child(2) {
            font-family: initial;
            font-size: var(--font-size-lg);
            color: var(--black);
        }
    }


    .signup-section {
        display: flex;

        @media (--sm-down) {
            flex-direction: column;

            > * {
                margin-top: 30px;
            }

            > :first-child {
                margin-top: 0;
            }
        }

        @media (--md-up) {
            flex-direction: row;

            & > * {
                box-sizing: border-box;
                width: 50%;

                &:nth-child(2n + 1) {
                    margin-inline-end: 30px;
                }
            }
        }

        & .checkboxes > * {
            margin-bottom: 26px;
            line-height: 1.71;
            font-size: 14px;

            &:last-child {
                margin-bottom: 0;
            }

            strong {
                display: block;
                line-height: 1.6;
                font-size: var(--font-size);
            }
        }

        & a {
            color: var(--blue);
            text-decoration: underline;

            &:hover {
                text-decoration: none;
            }
        }

        a.terms {
            font-size: var(--font-size);
            font-weight: bold;
            line-height: 1.25;
        }
    }

    & .save {
        margin: 0 auto;
        min-height: 57px;
        background: var(--black);
    }
}

.selected-accent {
    background: var(--light-grey);
    border-radius: 15rem;
    padding: 0.8rem 1.5rem;
    margin-bottom: 1.5rem;
    margin-inline-end: 1rem;
    display: inline-block;
    img {
        cursor: pointer;
        padding-inline-end: 1rem;
    }
}

#accent-selection-menu {
    max-height: 200px;
    overflow-y: scroll;

    .add-new-accent {
        color: var(--blue);
        font-weight: 600;

        &:focus, &:hover {
            background: var(--light-grey);
        }
    }
}

